# inzohra-ai

./: .env.example  .gitignore  CLAUDE.md  FEATURES.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: house-rules.md  settings.json  skills-registry.md
docs/: 01-mission-and-scope.md  02-architecture-nine-layers.md  03-document-processing.md  04-data-model-and-provenance.md  05-measurement.md  06-knowledge-base.md  07-agents-and-skills.md  08-question-checklist-agent.md  09-reasoning-tools.md  10-review-engine.md  11-output-letter.md  12-frontend.md  13-learning-loop.md  14-security-and-liability.md  15-operations.md  16-development-plan.md  17-invariants-and-risks.md  18-glossary.md
prompts/: 00-bootstrap.md  01-phase-00-foundations.md  02-phase-01-sheet-identity.md  03-phase-02-schedules.md  04-phase-03-measurement.md  05-phase-04-arch-access.md  06-phase-05-mep-structural-energy.md  07-phase-06-drafter-letter.md  08-phase-07-learning-loop.md  09-phase-08-second-jurisdiction.md  10-phase-09-measurement-v2-qc-agent.md  11-finalize-and-ship.md
schemas/: cross_doc_claim.schema.json  entity.schema.json  finding.schema.json  jurisdictional-pack.schema.json  letter-bundle.schema.json  measurement.schema.json
scripts/: ingest_all_fixture.py  ingest_fixture.py  run_compare.py  (+8 more)
services/ingestion/: README.md  pyproject.toml
services/ingestion/app/: smoke.py
services/ingestion/app/extractors/: __init__.py  code_note.py  question_checklist.py  review_letter.py  schedule.py  sheet_identifier.py  sheet_index.py  title24_form.py  title_block.py
services/ingestion/app/pipelines/: __init__.py  plan_set.py  review_letter.py  title24.py
services/ingestion/tests/: __init__.py
services/review/: README.md  pyproject.toml
services/review/app/: opus_escalation.py  smoke.py
services/review/app/codekb/: __init__.py  citations.py  embedder.py  resolver.py  seed_data.py  tools.py
services/review/app/comparison/: __init__.py  alignment.py  compare.py  edit_distance.py
services/review/app/drafter/: drafter.py  revision_cloud.py
services/review/app/qca/: __init__.py  answer_pipeline.py
services/review/app/reconciliation/: cross_doc.py
services/review/app/reviewers/: __init__.py  _context.py  accessibility.py  architectural.py  calgreen.py  electrical.py  energy.py  fire_life_safety.py  mechanical.py  plan_integrity.py  plumbing.py  structural.py
services/review/app/shadow/: __init__.py  shadow.py
services/review/tests/: conftest.py  test_accessibility_rules.py  test_plan_integrity_rules.py  test_qca.py  test_resolver.py
(+173 files in other folders)
