[project]
name = "inzohra-ingestion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "anthropic>=0.30.0",
    "psycopg[binary]>=3.1.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "pymupdf>=1.24.0",
    "pillow>=10.2.0",
    "opencv-python-headless>=4.9.0",
    "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
